# netbeam

./: CHANGELOG.md  PHASES.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  ui.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs  store.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/file/: checksum.rs  mod.rs  receiver.rs  sender.rs
src-tauri/src/network/: client.rs  discovery.rs  mod.rs  protocol.rs  server.rs
