[package]
name = "netbeam"
version = "1.0.0"
description = "Netbeam Application"
authors = ["Ananda"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
crc32fast = "1.3.2"
tokio = { version = "1.52.4", features = ["full"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
sha2 = "0.10.9"
tauri-plugin-dialog = "2.7.1"
dirs = "6.0.0"
walkdir = "2.5.0"
